# reddit-researcher-agent

./: .gitignore  README.md  docker-compose.yml  wstest.html
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  test_redis_pubsub.py
backend/alembic/: env.py
backend/alembic/versions/: c421cc677464_create_initial_tables_for_tasks_and_.py  f3ab58d02680_create_evidence_board_tables_and_add_.py  fb9a2be84179_add_task_log_table.py
backend/app/: dependencies.py  main.py
backend/app/api/v1/endpoints/: research.py
backend/app/core/: config.py
backend/app/db/: crud.py  models.py  session.py
backend/app/research_agent/: README.md  __init__.py  chains.py  graph.py  models.py  nodes.py  prompts.py  reddit_client.py  states.py  workflow.py
backend/app/worker/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_main.py  test_research_api.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/research/: route.ts
frontend/src/app/api/research/[taskId]/: route.ts
frontend/src/app/api/research/[taskId]/logs/: route.ts
frontend/src/app/report/[taskId]/: page.tsx
frontend/src/app/task/[taskId]/: page.tsx  task-view.tsx
frontend/src/components/: extracted-ideas-display.tsx  interactive-report-viewer.tsx  log-display.tsx  report-viewer.tsx  research-form.tsx  source-posts-display.tsx  status-display.tsx  task-view-skeleton.tsx
